# SpecCade

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_ORCHESTRATION.md  IMPLEMENTATION_SUMMARY.md  PARITY_MATRIX.md  README.md  SPECCADE_PROMPT_PACKAGE.md  SPECCADE_REFACTOR_PLAYBOOK.md  TEST_COVERAGE_SONG.md  analyze_presets.py  fix_modules.py  generate_modules.py  implementation_log.md  split_audio.py  test_packed.json  validate_all.py
crates/speccade-backend-audio/: Cargo.toml
crates/speccade-backend-audio/examples/: test_instrument.rs
crates/speccade-backend-audio/src/: envelope.rs  error.rs  filter.rs  generate.rs  instrument.rs  lib.rs  loop_processing.rs  mixer.rs  oscillator.rs  rng.rs  wav.rs
crates/speccade-backend-audio/src/effects/: auto_filter.rs  cabinet.rs  chain.rs  chorus.rs  delay.rs  delay_line.rs  distortion.rs  dynamics.rs  dynamics_tests.rs  eq.rs  flanger.rs  granular_delay.rs  mod.rs  multi_tap_delay.rs  reverb.rs  ring_mod.rs  rotary.rs  stereo.rs  tape.rs  transient.rs
crates/speccade-backend-audio/src/filter/: comb.rs  formant.rs  ladder.rs  mod.rs
crates/speccade-backend-audio/src/generate/: converters.rs  filters.rs  layer.rs  lfo_granular.rs  lfo_modulation.rs  mod.rs  modulation.rs  oscillators.rs  tests.rs
crates/speccade-backend-audio/src/mixer/: mixer.rs  mod.rs  processing.rs  tests_delay.rs  tests_layer.rs  tests_mixer_basic.rs  tests_mixer_output.rs  tests_mixing.rs  tests_normalization.rs  tests_soft_clip.rs  tests_stereo_output.rs  types.rs
crates/speccade-backend-audio/src/modulation/: lfo.rs  mod.rs  tests.rs
crates/speccade-backend-audio/src/synthesis/: am.rs  bowed_string.rs  comb_synth.rs  feedback_fm.rs  fm.rs  formant.rs  granular.rs  harmonics.rs  karplus.rs  membrane.rs  metallic.rs  mod.rs  modal.rs  noise.rs  oscillators.rs  phase_distortion.rs  pitched_body.rs  pulsar.rs  ring_mod.rs  spectral.rs  vector.rs  vocoder.rs  vosim.rs  waveguide.rs  wavetable.rs
crates/speccade-backend-audio/src/wav/: builder.rs  format.rs  mod.rs  pcm.rs  result.rs  tests.rs  writer.rs
crates/speccade-backend-audio/tests/: test_new_instrument_features.rs  test_synthesis_body_metallic.rs  test_synthesis_filters.rs  test_synthesis_fm_karplus_additive.rs  test_synthesis_multilayer_determinism.rs  test_synthesis_noise_multi_osc.rs  test_synthesis_oscillator.rs  test_synthesis_types.rs
crates/speccade-backend-blender/: Cargo.toml
crates/speccade-backend-blender/src/: animation.rs  animation_helpers.rs  boolean_kit.rs  error.rs  lib.rs  mesh_to_sprite.rs  metrics.rs  modular_kit.rs  orchestrator.rs  organic_sculpt.rs  rigged_animation.rs  shrinkwrap.rs  skeletal_mesh.rs  static_mesh.rs
crates/speccade-backend-music/: Cargo.toml
crates/speccade-backend-music/src/: compose.rs  envelope.rs  generate.rs  it_gen.rs  lib.rs  note.rs  parity.rs  synthesis.rs  xm_gen.rs
crates/speccade-backend-music/src/compose/: error.rs  expander.rs  expander_context.rs  expander_eval.rs  expander_time.rs  harmony.rs  merge.rs  mod.rs  seq.rs  tests.rs  utils.rs
crates/speccade-backend-music/src/generate/: helpers.rs  instrument_baking.rs  loop_detection.rs  mod.rs  tests.rs
crates/speccade-backend-music/src/it/: header.rs  instrument.rs  mod.rs  pattern.rs  sample.rs  validator.rs  writer.rs
crates/speccade-backend-music/src/it_gen/: automation.rs  instrument.rs  mod.rs  pattern.rs  tests.rs
crates/speccade-backend-music/src/note/: constants.rs  conversion.rs  frequency.rs  mod.rs  pitch.rs  tests.rs
crates/speccade-backend-music/src/xm/: header.rs  (+6 more)
crates/speccade-backend-music/tests/: test_it_writer.rs  test_it_writer_header.rs  test_it_writer_integration.rs  test_it_writer_patterns_samples.rs  test_xm_writer.rs  test_xm_writer_header_pattern.rs  test_xm_writer_instrument_sample.rs  test_xm_writer_integration.rs
crates/speccade-backend-texture/: Cargo.toml
crates/speccade-backend-texture/src/: color.rs  decal.rs  generate.rs  lib.rs  matcap.rs  normal_map.rs  normal_map_patterns.rs  packing.rs  particle_profile.rs  png.rs  rng.rs  shared.rs  splat_set.rs  sprite.rs  trimsheet.rs  vfx.rs
crates/speccade-backend-texture/tests/: test_noise.rs  test_noise_advanced.rs  test_noise_basic.rs  test_noise_integration.rs
crates/speccade-cli/: Cargo.toml  build.rs
crates/speccade-cli/src/: cache.rs  cli_args.rs  dispatch.rs  input.rs  lib.rs  main.rs  parity_data.rs  parity_matrix.rs
crates/speccade-editor/: Cargo.toml  build.rs
crates/speccade-editor/permissions/: default.toml
crates/speccade-editor/src/: lib.rs  watcher.rs
crates/speccade-lint/: Cargo.toml
crates/speccade-lint/src/: lib.rs  registry.rs  report.rs  rules.rs
crates/speccade-mcp/: Cargo.toml
crates/speccade-mcp/src/: cli_runner.rs  lib.rs  main.rs
crates/speccade-mcp/tests/: tools_test.rs
crates/speccade-spec/: Cargo.toml
crates/speccade-spec/src/: error.rs  hash.rs  lib.rs  output.rs  report.rs  spec.rs  validation.rs
crates/speccade-tests/: Cargo.toml
crates/speccade-tests/src/: audio_analysis.rs  determinism.rs  fixtures.rs  format_validators.rs  harness.rs  lib.rs
crates/speccade-tests/tests/: adversarial_specs.rs  analyze_serve.rs  canonicalization.rs  compose.rs  determinism_examples.rs  drum_kit_quality.rs  e2e.rs  e2e_determinism.rs  e2e_generation.rs  e2e_migration.rs  e2e_validation.rs  editor_preview.rs  feature_coverage.rs  golden_hash_verification.rs  golden_starlark_validation.rs  mesh_metrics.rs  music_external_conformance.rs  music_parity.rs  preset_qa.rs  proptest_validation.rs  starlark_input.rs  stdlib_coverage.rs  stdlib_snapshot.rs  validate_asset_integration.rs  verify.rs  xm_validation.rs  xm_validation_header.rs  xm_validation_instrument.rs  xm_validation_integration.rs  xm_validation_pattern.rs
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: main.rs
examples/extensions/simple-subprocess/: Cargo.toml  README.md  manifest.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_json_deser.rs
(+1791 files in other folders)
