[workspace]
members = [
    "crates/speccade-spec",
    "crates/speccade-cli",
    "crates/speccade-backend-audio",
    "crates/speccade-backend-music",
    "crates/speccade-backend-texture",
    "crates/speccade-backend-blender",
    "crates/speccade-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "1"
anyhow = "1"
rand = "0.8"
rand_pcg = "0.3"
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
walkdir = "2"
byteorder = "1"
png = "0.17"
tempfile = "3"
which = "6"
hound = "3"

# Test dependencies
pretty_assertions = "1"

# Workspace crates
speccade-spec = { path = "crates/speccade-spec" }
speccade-cli = { path = "crates/speccade-cli" }
speccade-backend-audio = { path = "crates/speccade-backend-audio" }
speccade-backend-music = { path = "crates/speccade-backend-music" }
speccade-backend-texture = { path = "crates/speccade-backend-texture" }
speccade-backend-blender = { path = "crates/speccade-backend-blender" }
