[package]
name = "speccade-backend-audio"
version = "0.1.0"
edition = "2021"
description = "SpecCade audio SFX backend - deterministic procedural audio synthesis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"
keywords = ["speccade", "audio", "synthesis", "procedural", "sfx"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
speccade-spec = { path = "../speccade-spec" }
rand_pcg = "0.3"
rand = "0.8"
blake3 = "1"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
