[package]
name = "speccade-backend-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SpecCade audio SFX backend - deterministic procedural audio synthesis"
keywords = ["speccade", "audio", "synthesis", "procedural", "sfx"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
speccade-spec.workspace = true
rand_pcg.workspace = true
rand.workspace = true
blake3.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustfft = "6.2"

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
