[package]
name = "speccade-backend-blender"
version = "0.1.0"
edition = "2021"
description = "SpecCade Blender backend - mesh and animation generation via Blender subprocess"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"
keywords = ["speccade", "blender", "mesh", "animation", "glb"]
categories = ["game-development", "multimedia::video"]

[dependencies]
speccade-spec = { path = "../speccade-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tempfile = "3"
which = "6"

[dev-dependencies]
pretty_assertions = "1"
