[package]
name = "speccade-backend-blender"
version = "0.1.0"
edition.workspace = true
description = "SpecCade Blender backend - mesh and animation generation via Blender subprocess"
license.workspace = true
repository.workspace = true
keywords = ["speccade", "blender", "mesh", "animation", "glb"]
categories = ["game-development", "multimedia::video"]

[dependencies]
speccade-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
which.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
