[package]
name = "speccade-backend-music"
version = "0.1.0"
edition.workspace = true
description = "SpecCade music backend - deterministic XM/IT tracker module generation"
license.workspace = true
repository.workspace = true
keywords = ["speccade", "music", "tracker", "xm", "it"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
speccade-spec.workspace = true
rand_pcg.workspace = true
rand.workspace = true
blake3.workspace = true
thiserror.workspace = true
byteorder.workspace = true
hound.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
