[package]
name = "speccade-backend-texture"
version = "0.1.0"
edition = "2021"
description = "SpecCade texture generation backend (material maps)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"
keywords = ["speccade", "texture", "procedural", "pbr"]
categories = ["game-development", "graphics"]

[dependencies]
speccade-spec = { path = "../speccade-spec" }
rand_pcg = "0.3"
rand = "0.8"
blake3 = "1"
thiserror = "1"
png = "0.17"
