[package]
name = "speccade-backend-texture"
version = "0.1.0"
edition.workspace = true
description = "SpecCade texture generation backend (material maps)"
license.workspace = true
repository.workspace = true
keywords = ["speccade", "texture", "procedural", "pbr"]
categories = ["game-development", "graphics"]

[dependencies]
speccade-spec.workspace = true
rand_pcg.workspace = true
rand.workspace = true
blake3.workspace = true
thiserror.workspace = true
png.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
