[package]
name = "speccade-cli"
version = "0.1.0"
edition.workspace = true
description = "SpecCade command-line interface for asset generation"
license.workspace = true
repository.workspace = true
keywords = ["assets", "gamedev", "procedural", "generation"]
categories = ["command-line-utilities", "game-development"]
build = "build.rs"

[[bin]]
name = "speccade"
path = "src/main.rs"

[dependencies]
speccade-spec.workspace = true
speccade-backend-audio.workspace = true
speccade-backend-music.workspace = true
speccade-backend-texture.workspace = true
speccade-backend-blender.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true
regex.workspace = true
walkdir.workspace = true
blake3.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
