[package]
name = "speccade-cli"
version = "0.1.0"
edition.workspace = true
description = "SpecCade command-line interface for asset generation"
license.workspace = true
repository.workspace = true
keywords = ["assets", "gamedev", "procedural", "generation"]
categories = ["command-line-utilities", "game-development"]
build = "build.rs"

[lib]
name = "speccade_cli"
path = "src/lib.rs"

[[bin]]
name = "speccade"
path = "src/main.rs"

[features]
default = ["starlark"]
starlark = ["dep:starlark", "dep:tokio", "dep:thiserror"]
serve = ["dep:tokio-tungstenite", "dep:futures-util", "dep:base64", "dep:tokio"]

[dependencies]
speccade-spec.workspace = true
speccade-lint.workspace = true
speccade-backend-audio.workspace = true
speccade-backend-music.workspace = true
speccade-backend-texture.workspace = true
speccade-backend-blender.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true
regex.workspace = true
walkdir.workspace = true
blake3.workspace = true
serde.workspace = true
png.workspace = true
image.workspace = true
gif.workspace = true
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# FFT for audio spectral analysis
rustfft = "6"

# glTF/GLB parsing for mesh analysis
gltf = "1"

# Starlark support (optional, enabled by default)
starlark = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# WebSocket serve support (optional)
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# Temp file support for preview-grid command
tempfile.workspace = true

# Glob pattern matching for file scanning
glob = "0.3"

# Open files with system default applications
open = "5"

# YAML serialization for coverage reports
serde_yaml.workspace = true

[dev-dependencies]
