[package]
name = "speccade-editor"
version = "0.1.0"
edition.workspace = true
description = "SpecCade standalone editor with Monaco, three.js, and Web Audio"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
speccade-cli = { workspace = true, features = ["starlark"] }
speccade-spec.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
notify.workspace = true
thiserror.workspace = true
blake3.workspace = true
base64.workspace = true
tempfile.workspace = true
gltf.workspace = true

[build-dependencies]
tauri-build.workspace = true
