[package]
name = "speccade-spec"
version = "0.1.0"
edition = "2021"
description = "SpecCade canonical spec types, validation, and hashing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"
keywords = ["speccade", "spec", "asset-generation", "validation"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
