[package]
name = "speccade-spec"
version = "0.1.0"
edition.workspace = true
description = "SpecCade canonical spec types, validation, and hashing"
license.workspace = true
repository.workspace = true
keywords = ["speccade", "spec", "asset-generation", "validation"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
