[package]
name = "speccade-tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration tests for SpecCade parity-critical flows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpecCade/SpecCade"
publish = false

# This is a test-only crate
[lib]
path = "src/lib.rs"

[[test]]
name = "e2e_migration"
path = "tests/e2e_migration.rs"

[[test]]
name = "e2e_generation"
path = "tests/e2e_generation.rs"

[[test]]
name = "e2e_validation"
path = "tests/e2e_validation.rs"

[[test]]
name = "e2e_determinism"
path = "tests/e2e_determinism.rs"

[[test]]
name = "starlark_input"
path = "tests/starlark_input.rs"

[[test]]
name = "preset_qa"
path = "tests/preset_qa.rs"

[[test]]
name = "golden_hash_verification"
path = "tests/golden_hash_verification.rs"

[dependencies]
# We need all the workspace crates for integration testing
speccade-spec = { workspace = true }
speccade-cli = { workspace = true }
speccade-backend-audio = { workspace = true }
speccade-backend-music = { workspace = true }
speccade-backend-texture = { workspace = true }
speccade-backend-blender = { workspace = true }

# Test utilities
tempfile = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
