[package]
name = "speccade-editor-app"
version = "0.1.0"
description = "SpecCade Editor - Standalone asset authoring tool"
authors = ["SpecCade Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
speccade-editor.workspace = true
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
