[package]
name = "simple-subprocess-extension"
version = "1.0.0"
edition = "2021"
description = "Reference implementation of a SpecCade subprocess extension"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
png = "0.17"
rand = "0.8"
rand_pcg = "0.3"

[[bin]]
name = "simple-subprocess-extension"
path = "src/main.rs"
